--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,11 @@
         <link href='http://fonts.googleapis.com/css?family=Trocchi' rel='stylesheet' type='text/css'>
         <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="./reset.css" rel="stylesheet" type="text/css">
-        <link href="./index2.css" rel="stylesheet" type="text/css">
+        <link href="./index.css" rel="stylesheet" type="text/css">
         <link href="../img/speech.ico" rel="icon" type="image/x-icon">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-        <!-- // <script src="./index.js" type="text/javascript"></script>  -->
+        <script src="./index.js" type="text/javascript"></script> 
         <script src='https://www.google.com/recaptcha/api.js'></script>
         <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
         <script src="./speech-map.js" type="text/javascript"></script>
@@ -32,7 +32,7 @@
               <a class="navbar-brand col-xs-10 col-sm-5 col-md-5 col-lg-4" href="./index.html">Childhood Speech &amp; Language</a>
               <div id="navbar" class="navbar-collapse navbar-right collapse col-xs-12 col-sm-7 col-md-7 col-lg-8">
                 <ul class="nav navbar-nav">
-                  <li><a class="col-xs-12 col-sm-2 col-md-2 col-lg-2 text-center" href="./index2.html">Home</a></li>
+                  <li><a class="col-xs-12 col-sm-2 col-md-2 col-lg-2 text-center" href="./index.html">Home</a></li>
                   <li><a class="col-xs-12 col-sm-2 col-md-2 col-lg-2 text-center" href="./resources.html">Resources</a></li>
                   <li><a class="col-xs-12 col-sm-2 col-md-2 col-lg-2 text-center" href="./testimonials.html">Testimonials</a></li>
                   <li><a class="col-xs-12 col-sm-2 col-md-2 col-lg-2 text-center" href="./about.html">About</a></li>
@@ -45,31 +45,32 @@
 
         <div id="contact_div" class="row">
           <h2 class="div_header col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">Contact</h2>
-            <form class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="email_form" action="form.php" method="post">
+
+            <!-- <form class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="email_form" name="form" action="" method="post"> -->
 
               <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 input_single_div">
-                <input class="col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-xs-12 col-sm-6 col-md-6 col-lg-4 text-center" type="email" placeholder="Your Name">
-                <input class="col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-xs-12 col-sm-6 col-md-6 col-lg-4 text-center" type="email" placeholder="Childs Name">
+                <input id="user_name" class="col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-xs-12 col-sm-6 col-md-6 col-lg-4 text-center" name="user_name" placeholder="Your Name">
+                <input id="child_name" class="col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-xs-12 col-sm-6 col-md-6 col-lg-4 text-center" name="child_name" placeholder="Childs Name">
               </div>
 
               <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 input_single_div">
-                <input class="col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-xs-12 col-sm-6 col-md-6 col-lg-4 text-center" type="email" placeholder="Phone Number">
-                <input class="col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-xs-12 col-sm-6 col-md-6 col-lg-4 text-center" type="email" placeholder="Email">
-                <input class="col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-xs-12 col-sm-6 col-md-6 col-lg-4 text-center" type="email" placeholder="Insurance">
+                <input id="phone_num" class="col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-xs-12 col-sm-6 col-md-6 col-lg-4 text-center" name="phone" placeholder="Phone Number">
+                <input id="user_email" class="col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-xs-12 col-sm-6 col-md-6 col-lg-4 text-center" name="email" placeholder="Email">
+                <input id="user_insur" class="col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-xs-12 col-sm-6 col-md-6 col-lg-4 text-center" name="insurance" placeholder="Insurance">
               </div>
 
               <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 input_single_div">
-                <input class="col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-xs-12 col-sm-6 col-md-6 col-lg-4 text-center" type="email" placeholder="Preferred Days of the Week">
-                <input class="col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-xs-12 col-sm-6 col-md-6 col-lg-4 text-center" type="email" placeholder="Preferred Times of the Day">
-                <input class="col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-xs-12 col-sm-6 col-md-6 col-lg-4 text-center" type="email" placeholder="Number of Weekly Sessions">
+                <input id="days_num" class="col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-xs-12 col-sm-6 col-md-6 col-lg-4 text-center" name="days" placeholder="Preferred Days of the Week">
+                <input id="time_num" class="col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-xs-12 col-sm-6 col-md-6 col-lg-4 text-center" name="times" placeholder="Preferred Times of the Day">
+                <input id="session_num" class="col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-xs-12 col-sm-6 col-md-6 col-lg-4 text-center" name="weekly_sessions" placeholder="Number of Weekly Sessions">
               </div>
 
               <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="g-recaptcha col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-xs-12 col-sm-6 col-md-6 col-lg-4" data-sitekey="6LcVDwETAAAAAAyWD8Y7WebNkXGcUwAQWPDPAJAl"></div>
-                <input class="col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-5 col-xs-6 col-sm-6 col-md-6 col-lg-2" type="submit" name="submit" value="Send email">
+                <input id="submit" class="col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-5 col-xs-6 col-sm-6 col-md-6 col-lg-2" name="submit" type="submit" value="Send email">
               </div>
 
-            </form>
+            <!-- </form> -->
         </div>
 
         <div id="map-canvas"></div>
