--- a/testimonials.html
+++ b/testimonials.html
@@ -9,7 +9,7 @@
         <link href='http://fonts.googleapis.com/css?family=Trocchi' rel='stylesheet' type='text/css'>
         <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="./reset.css" rel="stylesheet" type="text/css">
-        <link href="./index2.css" rel="stylesheet" type="text/css">
+        <link href="./index.css" rel="stylesheet" type="text/css">
         <link href="../img/speech.ico" rel="icon" type="image/x-icon">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
@@ -29,7 +29,7 @@
               <a class="navbar-brand col-xs-10 col-sm-5 col-md-5 col-lg-4" href="./index.html">Childhood Speech &amp; Language</a>
               <div id="navbar" class="navbar-collapse navbar-right collapse col-xs-12 col-sm-7 col-md-7 col-lg-8">
                 <ul class="nav navbar-nav">
-                  <li><a class="col-xs-12 col-sm-2 col-md-2 col-lg-2 text-center" href="./index2.html">Home</a></li>
+                  <li><a class="col-xs-12 col-sm-2 col-md-2 col-lg-2 text-center" href="./index.html">Home</a></li>
                   <li><a class="col-xs-12 col-sm-2 col-md-2 col-lg-2 text-center" href="./resources.html">Resources</a></li>
                   <li class="current_tab"><a class="col-xs-12 col-sm-2 col-md-2 col-lg-2 text-center" href="./testimonials.html">Testimonials</a></li>
                   <li><a class="col-xs-12 col-sm-2 col-md-2 col-lg-2 text-center" href="./about.html">About</a></li>
