--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
         <link href='http://fonts.googleapis.com/css?family=Trocchi' rel='stylesheet' type='text/css'>
         <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="./reset.css" rel="stylesheet" type="text/css">
-        <link href="./index2.css" rel="stylesheet" type="text/css">
+        <link href="./index.css" rel="stylesheet" type="text/css">
         <link href="../img/speech.ico" rel="icon" type="image/x-icon">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
@@ -26,14 +26,14 @@
               <button type="button" class="navbar-toggle collapsed col-xs-1 col-sm-1 col-md-1 col-lg-1" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="glyphicon glyphicon-menu-hamburger"></span>
               </button>
-              <a class="navbar-brand col-xs-10 col-sm-5 col-md-5 col-lg-4" href="#">Childhood Speech &amp; Language</a>
+              <a class="navbar-brand col-xs-10 col-sm-5 col-md-5 col-lg-4" href="./index.html">Childhood Speech &amp; Language</a>
               <div id="navbar" class="navbar-collapse navbar-right collapse col-xs-12 col-sm-7 col-md-7 col-lg-8">
                 <ul class="nav navbar-nav">
                   <li class="current_tab"><a class="col-xs-12 col-sm-2 col-md-2 col-lg-2 text-center" href="./index2.html">Home</a></li>
                   <li><a class="col-xs-12 col-sm-2 col-md-2 col-lg-2 text-center" href="./resources.html">Resources</a></li>
                   <li><a class="col-xs-12 col-sm-2 col-md-2 col-lg-2 text-center" href="./testimonials.html">Testimonials</a></li>
                   <li><a class="col-xs-12 col-sm-2 col-md-2 col-lg-2 text-center" href="./about.html">About</a></li>
-                  <li><a class="col-xs-12 col-sm-2 col-md-2 col-lg-2 text-center" href="./contact.html">Contact</a></li>
+                  <li><a class="col-xs-12 col-sm-2 col-md-2 col-lg-2 text-center" href="./contact.php">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -49,9 +49,9 @@
         <div class="row">
           <div id="mission" class="div_section col-xs-12 col-sm-12 col-md-12 col-lg-12">
               <h2 class="div_header col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">Our Mission</h2>
-              <p class="col-sm-offset-2 col-md-offset-2 col-lg-offset-2 col-xs-12 col-sm-8 col-md-8 col-lg-8 text-center section_text">If therapy is not motivating, it will not be successful. We believe in making speech therapy fun and are not afraid to look silly in front of you or your children! Many of the children we serve find communication a daunting and consuming task. At Childhood Speech &amp; Language, our goal is to make communication a valuable tool for your child to explore their world. This is what drives our work here.</p>
-              <p class="col-sm-offset-2 col-md-offset-2 col-lg-offset-2 col-xs-12 col-sm-8 col-md-8 col-lg-8 text-center section_text">To achieve this, we utilize a variety of therapeutic techniques and tools including PROMPT, PECS &amp; Sign Language. We believe in play-based therapy as this is how children learn about the world around them. Together, we can help your child reach their full potential.</p>
-              <p class="col-sm-offset-2 col-md-offset-2 col-lg-offset-2 col-xs-12 col-sm-8 col-md-8 col-lg-8 text-center section_text">Want to learn more about our speech and language services? Fill out this short form and receive information about our programs. Also, make sure to check our common questions page for more information on payment and insurance policies.</p>
+              <p class="col-sm-offset-2 col-md-offset-2 col-lg-offset-3 col-xs-12 col-sm-8 col-md-8 col-lg-6 text-center section_text">If therapy is not motivating, it will not be successful. We believe in making speech therapy fun and are not afraid to look silly in front of you or your children! Many of the children we serve find communication a daunting and consuming task. At Childhood Speech &amp; Language, our goal is to make communication a valuable tool for your child to explore their world. This is what drives our work here.</p>
+              <p class="col-sm-offset-2 col-md-offset-2 col-lg-offset-3 col-xs-12 col-sm-8 col-md-8 col-lg-6 text-center section_text">To achieve this, we utilize a variety of therapeutic techniques and tools including PROMPT, PECS &amp; Sign Language. We believe in play-based therapy as this is how children learn about the world around them. Together, we can help your child reach their full potential.</p>
+              <p class="col-sm-offset-2 col-md-offset-2 col-lg-offset-3 col-xs-12 col-sm-8 col-md-8 col-lg-6 text-center section_text">Want to learn more about our speech and language services? Fill out this short form and receive information about our programs. Also, make sure to check our common questions page for more information on payment and insurance policies.</p>
           </div>
         </div>
 
